# sfizz

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  FUNDING.yml  GOVERNANCE.md  LICENSE  LICENSE.md  README.md  TODO.md  _config.yml  appveyor.yml  common.mk  dpf.mk  generic.mk  index.md  innosetup.iss  macos.md  package.json  rack.mk  setup.sh
benchmarks/: AudioBuffer_Fill.cpp  AudioBuffer_Interleaved_Read.cpp  AudioBuffers.cpp  BM.h  BM_ADSR.cpp  BM_OPF_high_vs_low.cpp  BM_add.cpp  BM_allWithin.cpp  BM_audioReaders.cpp  BM_clamp.cpp  BM_clock.cpp  BM_copy.cpp  BM_cumsum.cpp  BM_diff.cpp  BM_divide.cpp  BM_envelopes.cpp  BM_fill.cpp  BM_filterModulation.cpp  BM_filterStereoMono.cpp  BM_flacfile.cpp  BM_gain.cpp  BM_interpolationCast.cpp  BM_interpolators.cpp  BM_logger.cpp  BM_looping.cpp  BM_mapVsArray.cpp  BM_maps.cpp  BM_mathfuns.cpp  BM_mean.cpp  BM_meanSquared.cpp  BM_multiplyAdd.cpp  BM_multiplyAddFixedGain.cpp  BM_multiplyMul.cpp  BM_multiplyMulFixedGain.cpp  BM_opcodeSpec.cpp  BM_opcodeSpec.h  BM_opcodeSpec_def.cpp  BM_pan.cpp  BM_pan_arm.cpp  BM_pointerIterationOrOffsets.cpp  (+31 more)
clients/: CMakeLists.txt  MidiHelpers.h  jack_client.cpp  sfizz_flat.cpp  sfizz_jack.man.in  sfizz_render.cpp  sfizz_render.man.in  sfzprint.cpp
demos/: CMakeLists.txt  DemoFilters.cpp  DemoFilters.ui  DemoParser.cpp  DemoParser.ui  DemoSmooth.cpp  DemoSmooth.ui  DemoStereo.cpp  DemoStereo.ui  DemoStretchTuning.cpp  DemoStretchTuning.ui  DemoWavetables.cpp  DemoWavetables.ui  EQ.cpp  FileInstrument.cpp  FileWavetable.cpp  Filter.cpp  PlotCurve.cpp  PlotLFO.cpp  PlotWavetables.cpp  Tuning.cpp
devtools/: CMakeLists.txt  CaptureEG.cpp  CaptureEG.h  CaptureEG.ui  HIIRDesigner.cpp  Importer.cpp  Preprocessor.cpp
editor/: CMakeLists.txt
editor/cmake/: Vstgui.cmake
editor/layout/: main.fl
lv2/: CMakeLists.txt  README.md  atomic_compat.h  lv2.version  lv2ui.version  manifest.ttl  manifest.ttl.in  sfizz.c  sfizz.ttl  sfizz.ttl.in  sfizz_lv2.h  sfizz_ui.cpp  sfizz_ui.ttl.in  vstgui_helpers.cpp  vstgui_helpers.h
lv2/resources/: DefaultInstrument.sfz
plugins/: CMakeLists.txt
plugins/editor/: CMakeLists.txt
plugins/lv2/: CMakeLists.txt  LICENSE.md.in  manifest.ttl.in  sfizz.cpp  sfizz.ttl.in  sfizz_lv2.h  sfizz_lv2_common.cpp  sfizz_lv2_plugin.h  sfizz_ui.cpp  sfizz_ui.ttl.in  vstgui_helpers.cpp  vstgui_helpers.h
plugins/puredata/: CMakeLists.txt  example.sfz  sfizz_puredata.c  sfizz~-help.pd
plugins/vst/: CMakeLists.txt  NativeHelpers.mm  OrderedEventProcessor.cpp  OrderedEventProcessor.h  OrderedEventProcessor.hpp  SfizzFileScan.cpp  SfizzForeignPaths.cpp  SfizzSettings.cpp  SfizzVstController.cpp  SfizzVstController.h  SfizzVstEditor.cpp  SfizzVstEditor.h  SfizzVstIDs.h  SfizzVstParameters.h  SfizzVstProcessor.cpp  SfizzVstProcessor.h  SfizzVstState.cpp  SfizzVstState.h  SfizzVstUpdates.cpp  SfizzVstUpdates.h  SfizzVstUpdates.hpp  Vst2PluginEntry.c  Vst2PluginFactory.cpp  VstPluginDefs.h.in  VstPluginFactory.cpp  X11RunLoop.cpp  X11RunLoop.h
sfizz/: ADSREnvelope.cpp  ADSREnvelope.h  AtomicGuard.h  AudioBuffer.h  AudioSpan.h  Buffer.h  CMakeLists.txt  Config.h  Defaults.h  EGDescription.h  FilePool.cpp  FilePool.h  HistoricalBuffer.h  LeakDetector.h  LinearEnvelope.cpp  LinearEnvelope.h  MathHelpers.h  MidiState.h  OnePoleFilter.h  Opcode.cpp  Opcode.h  Parser.cpp  Parser.h  Range.h  Region.cpp  Region.h  SIMDDummy.cpp  SIMDHelpers.h  SIMDSSE.cpp  ScopedFTZ.h  SfzHelpers.cpp  SfzHelpers.h  StereoBuffer.h  StereoSpan.h  StringViewHelpers.h  Synth.cpp  Synth.h  Voice.cpp  Voice.h  filesystem.h  (+3 more)
sfizz/compat/: algorithm.h  filesystem.h  inline.h  utils.h
sfizz/mathfuns/: sse_mathfun.h
src/: AudioBuffer.h  Buffer.h  CMakeLists.txt  Config.h.in  LeakDetector.h  OnePoleFilter.h  Parser.cpp  Range.h  SIMDSSE.cpp  sfizz.h  sfizz.hpp  sfizz_message.h  sfizz_parser.hpp
src/sfizz/: ADSREnvelope.cpp  ADSREnvelope.h  AtomicGuard.h  AudioBuffer.h  AudioReader.cpp  AudioReader.h  AudioSpan.h  BeatClock.cpp  BeatClock.h  Buffer.h  BufferPool.h  CCMap.h  Config.h  Curve.cpp  Curve.h  Curve.hpp  Debug.h  Defaults.cpp  Defaults.h  Defer.h  EGDescription.h  EQDescription.h  EQPool.cpp  EQPool.h  Effects.cpp  Effects.h  EventEnvelopes.cpp  EventEnvelopes.h  FileId.cpp  FileId.h  FileInstrument.cpp  FileInstrument.h  FileMetadata.cpp  FileMetadata.h  FilePool.cpp  FilePool.h  FilterDescription.h  FilterPool.cpp  FilterPool.h  FlexEGDescription.cpp  (+113 more)
tests/: ADSREnvelopeT.cpp  AudioBuffer.cpp  AudioBufferT.cpp  AudioFilesT.cpp  BindingsT.cpp  Buffer.cpp  BufferT.cpp  CMakeLists.txt  ConcurrencyT.cpp  CurveT.cpp  DataHelpers.cpp  DataHelpers.h  DemoFilters.cpp  DemoFilters.ui  DemoParser.cpp  DemoParser.ui  DemoStereo.cpp  DemoWavetables.cpp  DemoWavetables.ui  DirectRegionT.cpp  EGDescriptionT.cpp  EQ.cpp  EventEnvelopesT.cpp  FileInstrument.cpp  FilePoolT.cpp  FilesT.cpp  Filter.cpp  FlexEGT.cpp  FloatHelpersT.cpp  Helpers.cpp  HelpersT.cpp  InterpolatorsT.cpp  LFOT.cpp  LinearEnvelopeT.cpp  LoggingT.cpp  MainT.cpp  MemoryT.cpp  MessagingT.cpp  MidiStateT.cpp  ModulationsT.cpp  (+35 more)
tests/TestFiles/: basic_hierarchy.sfz  basic_hierarchy_antislash.sfz  case_insensitive.sfz  channels.sfz  channels_multi.sfz  curves.sfz  default_path.sfz  default_path_generator.sfz  default_path_reset.sfz  defines.sfz  kick.flac  (+34 more)
vst/: CMakeLists.txt  FileTrie.cpp  FileTrie.h  GUIComponents.cpp  GUIComponents.h  IdleUpdateHandler.h  NativeHelpers.cpp  NativeHelpers.h  NativeHelpers.mm  NativeIdleRunner.h  NativeIdleRunner_mac.mm  NativeIdleRunner_win.cpp  RTSemaphore.h  SfizzFileScan.cpp  SfizzFileScan.h  SfizzForeignPaths.cpp  SfizzForeignPaths.h  SfizzForeignPaths.mm  SfizzSettings.mm  SfizzVstController.cpp  SfizzVstController.h  SfizzVstEditor.cpp  SfizzVstEditor.h  SfizzVstParameters.h  SfizzVstProcessor.cpp  SfizzVstProcessor.h  SfizzVstState.cpp  SfizzVstState.h  SfizzVstUpdates.cpp  SfizzVstUpdates.h  VstPluginFactory.cpp  WeakPtr.h  X11RunLoop.cpp  vst3.version
(+1049 files in other folders)
